--- a/style.css
+++ b/style.css
@@ -18,20 +18,23 @@ body{min-width:960px;}.container_12,.container_16{margin-left:auto;margin-right:
 
 /*= Global
 -------------------------------------------------------------- */
-a { text-decoration: none; color: #3366CC; }
-
-a:hover {
-    color: #1623C0;
-    -webkit-transition: color .2s;
-    -moz-transition: color .2s;
-    -o-transition: color .2s;
-    -ms-transition: color .2s;
-    transition: color .2s;
+a {
+    text-decoration: none;
+    color: #3366CC;
+    -webkit-transition: color .5s;
+    -moz-transition: color .5s;
+    -o-transition: color .5s;
+    -ms-transition: color .5s;
+    transition: color .5s;
     -webkit-transition-timing-function: linear;
     -moz-transition-timing-function: linear;
     -o-transition-timing-function: linear;
     -ms-transition-timing-function: linear;
     transition-timing-function: linear;
+    }
+
+a:hover {
+    color: #1623C0;
     }
 
 body { background: #f2f2f2; }
@@ -136,26 +139,12 @@ article .meta-list-container ul li { background: url("images/bullet.png") no-rep
 article .meta-list-container ul li em { color: #888; }
 article .meta-list-container ul li:nth-child(1) { background: none; padding-left: 0; }
 
-/*= Footer
--------------------------------------------------------------- */
-footer { border-top: 1px solid #e3e3e3; margin-top: 60px; }
-footer a { border-bottom: 1px solid #ccc; }
-footer li { list-style-type: none; }
-footer .bottom { border-top: 1px solid #fff; color: #999; font: normal 300 11px/1 Helvetica, sans-serif, arial; font-style: italic; float: left; padding: 10px 0; width: 100%; }
-footer .bottom ul { text-align: right; }
-footer .bottom .version { font-weight: bold; }
-footer .widget-container { float: left; font-size: 12px; width: 300px; margin-right: 20px; }
-footer .widget-area { border-top: 1px solid #fff; border-bottom: 1px solid #e3e3e3; float: left; padding: 10px 0; width: 100%; }
-footer li.widget_gravatar { width: 500px; }
-footer li.widget_twitter { margin: 0; width: 420px; }
 
 /*= Default Widgets
 -------------------------------------------------------------- */
 li.widget-container,
 li.widget-container li { list-style-type: none; }
 
-.widget-container { color: #999; font: 300 normal 12px/1.4em Helvetica, sans-serif, arial; }
-.widget-container .widget-title,
 .widget-container .widget-title a { font: normal 14px/1 Helvetica, sans-serif, arial; color: #333; text-shadow: 0px 1px 0px #fff; margin-bottom: 5px; }
 .widget-container a { font: normal 300 12px/1 Helvetica, sans-serif, arial; }
 .widget-container ul li { line-height: 1.2em; margin-bottom: 10px; }
@@ -208,6 +197,9 @@ div.formBuilderFailure h4 { font-weight: bold; font-size: 13px; text-shadow: 1px
 
 /*= Sidebar
 -------------------------------------------------------------- */
+.sidebar-container .widget-container { color: #999; font: 300 normal 12px/1.4em Helvetica, sans-serif, arial; }
+.sidebar-container .widget-container .widget-title,
+
 .sidebar-container li.widget-container { border-bottom: 1px solid #E3E3E3; border-top: 1px solid #FFF; padding: 15px 0 23px; }
 .sidebar-container li:first-child.widget-container { border-top: 0; }
 .sidebar-container li:last-child.widget-container { border-bottom: 0; }
@@ -333,4 +325,115 @@ code {
     width: 100%;
     }
 
+small .genericon {
+    position: relative;
+    top: -3px;
+    }
 
+.posted-in {
+    margin-right: 10px;
+    }
+
+
+
+/*= Bottom/Footer
+-------------------------------------------------------------- */
+.bottom-container {
+    background: #363636;
+    box-shadow: 0 5px 10px #272727 inset;
+    float: left;
+    margin: 40px 0 0;
+    width: 100%;
+    }
+
+.bottom-container .padding {
+    float: left;
+    padding: 50px 0 25px;
+    }
+
+.bottom-container .widget-container {
+    margin: 0 0 30px;
+    }
+
+.bottom-container .widget-container h4,
+.bottom-container .widget-container h4.widget-title {
+    font: bold 12px/1 Helvetica, sans-serif, arial;
+    color: #1d1d1d;
+    margin: 0 0 10px 0;
+    text-transform: uppercase;
+    }
+
+.bottom-container .widget-container,
+.bottom-container .widget-container a {
+    color: #999;
+    }
+
+.bottom-container .widget-container a {
+    -webkit-transition: color .5s;
+    -moz-transition: color .5s;
+    -o-transition: color .5s;
+    -ms-transition: color .5s;
+    transition: color .5s;
+    -webkit-transition-timing-function: linear;
+    -moz-transition-timing-function: linear;
+    -o-transition-timing-function: linear;
+    -ms-transition-timing-function: linear;
+    transition-timing-function: linear;
+    }
+
+.bottom-container .widget-container a:hover {
+    color: #fff;
+    }
+
+.bottom-container .widget-container ul {
+    padding: 0 0 0 17px;
+    }
+
+.bottom-container .widget-container ul li {
+    margin-bottom: 5px;
+    }
+
+.bottom-container #latest {
+    float: left;
+    }
+
+.bottom-container #connect {
+    float: left;
+    margin: 0 40px 0 0;
+    }
+
+.bottom-container #connect ul {
+    list-style-type: none;
+    padding: 0;
+    }
+
+.bottom-container #connect .genericon {
+    margin: 1px 5px 0 0;
+    }
+
+.bottom-container .textwidget {
+    color: #999;
+    font-family: georgia;
+    font-size: 16px;
+    line-height: 1.4em;
+    }
+
+.bottom-container footer {
+    background: #242424;
+    box-shadow: 0 5px 10px #181818 inset;
+    float: left;
+    width: 100%;
+    }
+
+.bottom-container footer .textwidget a {
+    color: #414141;
+    }
+
+.bottom-container footer .textwidget {
+    color: #414141;
+    text-shadow: 1px 1px 0 black;
+    font-family: helvetica;
+    text-align: center;
+    line-height: 1.6em;
+    font-size: 15px;
+    }
